# Synesthesia

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
Synesthesia/Synesthesia/: main.cpp
Synesthesia/Synesthesia.xcodeproj/: project.pbxproj
Synesthesia/Synesthesia.xcodeproj/project.xcworkspace/xcuserdata/isc.xcuserdatad/: UserInterfaceState.xcuserstate
Synesthesia/Synesthesia.xcodeproj/xcuserdata/isc.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: ParticleSystem.cpp  ParticleSystem.hpp  game.cpp  game.hpp  keyboard.cpp  keyboard.hpp  main.cpp
